# Factor-Research

./: .env_example  README.md  pyproject.toml
Autoencoder-Asset-Pricing/: analysis.py  data_prepare.py  main.py  random.ipynb
Autoencoder-Asset-Pricing/models/: CA.py
Autoencoder-Asset-Pricing/results/inference/: CA1_12_inference.csv  CA1_15_inference.csv  CA1_1_inference.csv  CA1_2_inference.csv  CA1_3_inference.csv  CA1_4_inference.csv  CA1_5_inference.csv  CA1_6_inference.csv  CA1_9_inference.csv  CA2_12_inference.csv  CA2_15_inference.csv  CA2_1_inference.csv  CA2_2_inference.csv  CA2_3_inference.csv  CA2_4_inference.csv  CA2_5_inference.csv  CA2_6_inference.csv  CA2_9_inference.csv  CA3_12_inference.csv  CA3_15_inference.csv  CA3_1_inference.csv  CA3_2_inference.csv  CA3_3_inference.csv  CA3_4_inference.csv  CA3_5_inference.csv  CA3_6_inference.csv  CA3_9_inference.csv  FF_1_inference.csv  FF_2_inference.csv  FF_3_inference.csv  FF_4_inference.csv  FF_5_inference.csv  FF_6_inference.csv  PCA_12_inference.csv  PCA_15_inference.csv  PCA_1_inference.csv  PCA_2_inference.csv  PCA_3_inference.csv  PCA_4_inference.csv  PCA_5_inference.csv  (+2 more)
Autoencoder-Asset-Pricing/results/predict/: CA1_12_predict.csv  CA1_15_predict.csv  CA1_1_predict.csv  CA1_2_predict.csv  CA1_3_predict.csv  CA1_4_predict.csv  CA1_5_predict.csv  CA1_6_predict.csv  CA1_9_predict.csv  CA2_12_predict.csv  CA2_15_predict.csv  CA2_1_predict.csv  CA2_2_predict.csv  CA2_3_predict.csv  CA2_4_predict.csv  CA2_5_predict.csv  CA2_6_predict.csv  CA2_9_predict.csv  CA3_12_predict.csv  CA3_15_predict.csv  CA3_1_predict.csv  CA3_2_predict.csv  CA3_3_predict.csv  CA3_4_predict.csv  CA3_5_predict.csv  CA3_6_predict.csv  CA3_9_predict.csv  FF_15_predict.csv  FF_1_predict.csv  FF_2_predict.csv  FF_3_predict.csv  FF_4_predict.csv  FF_5_predict.csv  PCA_12_predict.csv  PCA_15_predict.csv  PCA_1_predict.csv  PCA_2_predict.csv  PCA_3_predict.csv  PCA_4_predict.csv  PCA_5_predict.csv  (+2 more)
Learning_to_Rank/: BestModel.ipynb  FeatureAnalysis.ipynb  FeaturesIC.ipynb  ModelWithNormalization.ipynb  ensamble_XGBoost_LTR.ipynb
data/: load_data.ipynb  sp100_cleaned.xlsx
data/fundamental_data/: ZACKS_FC.csv  ZACKS_FR.csv  ZACKS_HDM.csv  ZACKS_MKTV.csv  ZACKS_MT.csv  ZACKS_SHRS.csv
notebooks/: Ensemble Model (XGBRanker & Ranknet).ipynb  Random Forest (100).ipynb  Random Forest (AAPL).ipynb  Random Forest (S&P1500).ipynb  Random Forest.ipynb  XGBoost_LTR copy.ipynb  aapm.ipynb  backtest_function_example.ipynb  build_fundamental_features.ipynb  build_technical_features.ipynb  ipca_fit_cs.ipynb  ipca_fit_ts.ipynb  ipca_rolling_ts.ipynb  pca (AAPL).ipynb  pca (SP1500).ipynb  ranknet.ipynb  technical_feature_importance.ipynb
src/Features/: calculate_features_ic.ipynb  fundamental_features.py  fundamental_features_new.py  technical_features.py  technical_features_new.py  test_feature.ipynb
src/util/: backtest_utilities.py  ipca.py  performance_utilities.py
test/Resources/ExcelFiles/: Technical Factors.xlsx  backtest returns sample.xlsx  balance sheet example.xlsx  cash flow example.xlsx  fundamental factors excel.xlsx  income statement example.xlsx
